added responsive part, and more choice options

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <br><br>
 
             <label>Data de nascimento</label>
-            <select name="dia" required>
+            <select name="dia">
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -61,7 +61,7 @@
                 <option value="31">31</option>
             </select>
 
-            <select name="mes" required>
+            <select name="mes">
                 <option value="jan">Jan</option>
                 <option value="fev">Fev</option>
                 <option value="mar">Mar</option>
@@ -76,7 +76,7 @@
                 <option value="dez">Dez</option>
             </select>
 
-            <select name="ano" required>
+            <select name="ano">
                 <option value="1999">1999</option>
                 <option value="2000">2000</option>
                 <option value="2001">2001</option>
@@ -90,15 +90,26 @@
                 <option value="2009">2009</option>
                 <option value="2010">2010</option>
                 <option value="2011">2011</option>
+                <option value="2012">2012</option>
+                <option value="2013">2013</option>
+                <option value="2014">2014</option>
+                <option value="2015">2015</option>
+                <option value="2016">2016</option>
+                <option value="2017">2017</option>
+                <option value="2018">2018</option>
+                <option value="2019">2019</option>
+                <option value="2020">2020</option>
+                <option value="2021">2021</option>
+                <option value="2022">2022</option>
             </select>
 
             <br>
             <br>
 
-            <label>Gênero</label><br>
+            <label class="genero">Gênero</label><br>
 
             <label for="feminino">Feminino</label>
-            <input type="radio" name="genero" id="feminino" value="feminino" checked>
+            <input type="radio" name="genero" id="feminino" value="feminino">
 
             <label for="masculino">Masculino</label>
             <input type="radio" name="genero" id="masculino" value="masculino">
@@ -112,8 +123,8 @@
             <input type="submit" value="Cadastre-se">
 
         </form>
-        <p class="termos" t>Ao clicar em Cadastre-se, você concorda com nossos Termos, <strong>Política de
-                Privacidade</strong> e <strong>Política de Cookies</strong>. Você poderá receber notificações por SMS e
+        <p class="termos" t>Ao clicar em Cadastre-se, você concorda com nossos Termos, <strong><a href="#">Política de
+            Privacidade</a></strong> e <strong><a href="#">Política de Cookies</a></strong>. Você poderá receber notificações por SMS e
             cancelar isso quando quiser.</p>
     </main>
 </body>
