--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
             <input type="text" name="sobrenome" id="sobrenome" placeholder="Sobrenome" class="dados-usuario">
 
-            <input type="text" name="celular-ou-email" id="celular-ou-email" placeholder="Celular ou email" class="dados-usuario" required>
+            <input type="text" name="celular-ou-email" id="celular-ou-email" placeholder="Celular ou email"
+                class="dados-usuario" required>
 
             <input type="password" name="senha" id="senha" placeholder="Nova senha" class="dados-usuario" required>
 
@@ -130,11 +131,10 @@
 
             <input type="submit" value="Cadastre-se" class="botao-cadastro">
 
+            <p class="termos">Ao clicar em Cadastre-se, você concorda com nossos Termos, <strong><a href="#">Política de Privacidade</a></strong> e <strong><a href="#">Política de Cookies</a></strong>. Você poderá
+                receber notificações por SMS e cancelar isso quando quiser.</p>
         </form>
-        <p class="termos">Ao clicar em Cadastre-se, você concorda com nossos Termos, <strong><a href="#">Política de
-                    Privacidade</a></strong> e <strong><a href="#">Política de Cookies</a></strong>. Você poderá receber
-            notificações por SMS e
-            cancelar isso quando quiser.</p>
+
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/js/all.min.js"
         integrity="sha512-rpLlll167T5LJHwp0waJCh3ZRf7pO6IT1+LZOhAyP6phAirwchClbTZV3iqL3BMrVxIYRbzGTpli4rfxsCK6Vw=="
