--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 
             <input type="text" name="sobrenome" id="sobrenome" placeholder="Sobrenome" class="dados-usuario">
 
-            <input type="text" name="celular-ou-email" id="celular-ou-email" placeholder="Celular ou email"
-                class="dados-usuario" required>
+            <input type="text" name="celular-ou-email" id="celular-ou-email" placeholder="Celular ou email" class="dados-usuario" required>
 
             <input type="password" name="senha" id="senha" placeholder="Nova senha" class="dados-usuario" required>
 
