♻️ refactor: formats the document and reorganizes the head tag by adding new meta tags

--- a/index.html
+++ b/index.html
@@ -1,156 +1,216 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Página com formulário de cadastro que se comunica com a API authJS. Página e formulário criados para fins de estudo."
+    />
+    <meta name="author" content="Fransuelton" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="src/images/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="src/css/reset.css">
-    <link rel="stylesheet" href="src/css/style.css">
-    <link rel="stylesheet" href="src/css/responsive.css">
     <title>Formulário de Cadastro</title>
-</head>
 
-<body>
+    <link
+      rel="shortcut icon"
+      href="src/images/favicon.png"
+      type="image/x-icon"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <link rel="stylesheet" href="src/css/reset.css" />
+    <link rel="stylesheet" href="src/css/style.css" />
+    <link rel="stylesheet" href="src/css/responsive.css" />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+
+  <body>
     <main class="container">
-        <div class="area-do-formulario">
-            <div class="introducao">
-                <img src="https://static.xx.fbcdn.net/rsrc.php/v3/yO/r/zgulV2zGm8t.png" alt="cl">
-                <h1 class="titulo">Cadastre-se</h1>
-                <p class="texto">É rápido e fácil.</p>
+      <div class="area-do-formulario">
+        <div class="introducao">
+          <img
+            src="https://static.xx.fbcdn.net/rsrc.php/v3/yO/r/zgulV2zGm8t.png"
+            alt="cl"
+          />
+          <h1 class="titulo">Cadastre-se</h1>
+          <p class="texto">É rápido e fácil.</p>
+        </div>
+
+        <hr />
+
+        <form action="index.html" method="get" class="formulario">
+          <div class="area-nome-completo">
+            <input
+              type="text"
+              name="nome"
+              id="nome"
+              placeholder="Nome"
+              class="area info"
+              required
+            />
+
+            <input
+              type="text"
+              name="sobrenome"
+              id="sobrenome"
+              placeholder="Sobrenome"
+              class="area info"
+            />
+          </div>
+
+          <input
+            type="text"
+            name="celular-ou-email"
+            id="celular-ou-email"
+            placeholder="Celular ou email"
+            class="info"
+            required
+          />
+
+          <input
+            type="password"
+            name="senha"
+            id="senha"
+            placeholder="Nova Senha"
+            class="info"
+            required
+          />
+
+          <label class="label">Data de nascimento</label>
+
+          <div class="data-de-nascimento">
+            <select name="dia" class="data-info">
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+              <option value="6">6</option>
+              <option value="7">7</option>
+              <option value="8">8</option>
+              <option value="9">9</option>
+              <option value="10">10</option>
+              <option value="11">11</option>
+              <option value="12">12</option>
+              <option value="13">13</option>
+              <option value="14">14</option>
+              <option value="15">15</option>
+              <option value="16">16</option>
+              <option value="17">17</option>
+              <option value="18">18</option>
+              <option value="19">19</option>
+              <option value="20">20</option>
+              <option value="21">21</option>
+              <option value="22">22</option>
+              <option value="23">23</option>
+              <option value="24">24</option>
+              <option value="25">25</option>
+              <option value="26">26</option>
+              <option value="27">27</option>
+              <option value="28" selected>28</option>
+              <option value="29">29</option>
+              <option value="30">30</option>
+              <option value="31">31</option>
+            </select>
+
+            <select name="mes" class="data-info">
+              <option value="jan">Jan</option>
+              <option value="fev">Fev</option>
+              <option value="mar">Mar</option>
+              <option value="abr">Abr</option>
+              <option value="mai">Mai</option>
+              <option value="jun" selected>Jun</option>
+              <option value="jul">Jul</option>
+              <option value="ago">Ago</option>
+              <option value="set">Set</option>
+              <option value="out">Out</option>
+              <option value="nov">Nov</option>
+              <option value="dez">Dez</option>
+            </select>
+
+            <select name="ano" class="data-info">
+              <option value="1999">1999</option>
+              <option value="2000">2000</option>
+              <option value="2001">2001</option>
+              <option value="2002">2002</option>
+              <option value="2003">2003</option>
+              <option value="2004">2004</option>
+              <option value="2005">2005</option>
+              <option value="2006">2006</option>
+              <option value="2007">2007</option>
+              <option value="2008">2008</option>
+              <option value="2009">2009</option>
+              <option value="2010">2010</option>
+              <option value="2011">2011</option>
+              <option value="2012">2012</option>
+              <option value="2013">2013</option>
+              <option value="2014">2014</option>
+              <option value="2015">2015</option>
+              <option value="2016">2016</option>
+              <option value="2017">2017</option>
+              <option value="2018">2018</option>
+              <option value="2019">2019</option>
+              <option value="2020">2020</option>
+              <option value="2021">2021</option>
+              <option value="2022">2022</option>
+              <option value="2023" selected>2023</option>
+            </select>
+          </div>
+
+          <label class="label">Gênero</label>
+
+          <div class="genero">
+            <div class="feminino">
+              <label for="feminino">Feminino</label>
+              <input
+                type="radio"
+                name="genero"
+                id="feminino"
+                value="feminino"
+              />
             </div>
 
-            <hr>
+            <div class="masculino">
+              <label for="masculino">Masculino</label>
+              <input
+                type="radio"
+                name="genero"
+                id="masculino"
+                value="masculino"
+              />
+            </div>
 
-            <form action="index.html" method="get" class="formulario">
+            <div class="personalizado">
+              <label for="personalizado">Personalizado</label>
+              <input
+                type="radio"
+                name="genero"
+                id="personalizado"
+                value="personalizado"
+              />
+            </div>
+          </div>
 
-                <div class="area-nome-completo">
-                    <input type="text" name="nome" id="nome" placeholder="Nome" class="area info" required>
-
-                    <input type="text" name="sobrenome" id="sobrenome" placeholder="Sobrenome" class="area info">
-                </div>
-
-                <input type="text" name="celular-ou-email" id="celular-ou-email" placeholder="Celular ou email"
-                    class="info" required>
-
-                <input type="password" name="senha" id="senha" placeholder="Nova Senha" class="info" required>
-
-                <label class="label">Data de nascimento</label>
-
-                <div class="data-de-nascimento">
-
-                    <select name="dia" class="data-info">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                        <option value="8">8</option>
-                        <option value="9">9</option>
-                        <option value="10">10</option>
-                        <option value="11">11</option>
-                        <option value="12">12</option>
-                        <option value="13">13</option>
-                        <option value="14">14</option>
-                        <option value="15">15</option>
-                        <option value="16">16</option>
-                        <option value="17">17</option>
-                        <option value="18">18</option>
-                        <option value="19">19</option>
-                        <option value="20">20</option>
-                        <option value="21">21</option>
-                        <option value="22">22</option>
-                        <option value="23">23</option>
-                        <option value="24">24</option>
-                        <option value="25">25</option>
-                        <option value="26">26</option>
-                        <option value="27">27</option>
-                        <option value="28" selected>28</option>
-                        <option value="29">29</option>
-                        <option value="30">30</option>
-                        <option value="31">31</option>
-                    </select>
-
-                    <select name="mes" class="data-info">
-                        <option value="jan">Jan</option>
-                        <option value="fev">Fev</option>
-                        <option value="mar">Mar</option>
-                        <option value="abr">Abr</option>
-                        <option value="mai">Mai</option>
-                        <option value="jun" selected>Jun</option>
-                        <option value="jul">Jul</option>
-                        <option value="ago">Ago</option>
-                        <option value="set">Set</option>
-                        <option value="out">Out</option>
-                        <option value="nov">Nov</option>
-                        <option value="dez">Dez</option>
-                    </select>
-
-                    <select name="ano" class="data-info">
-                        <option value="1999">1999</option>
-                        <option value="2000">2000</option>
-                        <option value="2001">2001</option>
-                        <option value="2002">2002</option>
-                        <option value="2003">2003</option>
-                        <option value="2004">2004</option>
-                        <option value="2005">2005</option>
-                        <option value="2006">2006</option>
-                        <option value="2007">2007</option>
-                        <option value="2008">2008</option>
-                        <option value="2009">2009</option>
-                        <option value="2010">2010</option>
-                        <option value="2011">2011</option>
-                        <option value="2012">2012</option>
-                        <option value="2013">2013</option>
-                        <option value="2014">2014</option>
-                        <option value="2015">2015</option>
-                        <option value="2016">2016</option>
-                        <option value="2017">2017</option>
-                        <option value="2018">2018</option>
-                        <option value="2019">2019</option>
-                        <option value="2020">2020</option>
-                        <option value="2021">2021</option>
-                        <option value="2022">2022</option>
-                        <option value="2023" selected>2023</option>
-                    </select>
-
-                </div>
-
-                <label class="label">Gênero</label>
-
-                <div class="genero">
-
-                    <div class="feminino">
-                        <label for="feminino">Feminino</label>
-                        <input type="radio" name="genero" id="feminino" value="feminino">
-                    </div>
-
-                    <div class="masculino">
-                        <label for="masculino">Masculino</label>
-                        <input type="radio" name="genero" id="masculino" value="masculino">
-                    </div>
-
-                    <div class="personalizado">
-                        <label for="personalizado">Personalizado</label>
-                        <input type="radio" name="genero" id="personalizado" value="personalizado">
-                    </div>
-                </div>
-
-                <div class="area-botao">
-                    <input type="submit" value="Cadastre-se" class="btn">
-                </div>
-                <div class="termos">
-                    <p>Ao clicar em Cadastre-se, você concorda com nossos Termos, <strong><a href="#">Política de Privacidade</a></strong> e <strong><a href="#">Política de Cookies</a></strong>. Você poderá receber notificações por SMS e cancelar isso quando quiser.</p>
-                </div>
-            </form>
-        </div>
+          <div class="area-botao">
+            <input type="submit" value="Cadastre-se" class="btn" />
+          </div>
+          <div class="termos">
+            <p>
+              Ao clicar em Cadastre-se, você concorda com nossos Termos,
+              <strong><a href="#">Política de Privacidade</a></strong> e
+              <strong><a href="#">Política de Cookies</a></strong
+              >. Você poderá receber notificações por SMS e cancelar isso quando
+              quiser.
+            </p>
+          </div>
+        </form>
+      </div>
     </main>
-</body>
-
+  </body>
 </html>
