✨ fix: add method attribute to form and ensure status paragraph is present

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
         </div>
 
         <hr />
+        <p class="status"></p>
 
-        <form class="form">
+        <form method="post" class="form">
           <div class="full-name-input-wrapper">
             <input
               type="text"
@@ -182,5 +183,6 @@
         </div>
       </div>
     </main>
+    <script src="./src/scripts/index.js"></script>
   </body>
 </html>
